# tactica

./: .mise.toml  .renovaterc.json5  Cargo.toml  Dockerfile  README.md  justfile  package.json
.github/: CODEOWNERS  labels.yaml
.github/workflows/: build-test.yaml  check.yaml  docker.yaml  label-sync.yaml
.renovate/: groups.json5
cli/: Cargo.toml
cli/src/: command.rs  main.rs
deploy/kube/: deployment.yaml  service.yaml
infra/docker/: Dockerfile.auth
infra/helm/: Chart.yaml  values.yaml
infra/helm/templates/: _helpers.tpl
infra/helm/templates/auth/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
lib/proto/: Cargo.toml  build.rs
lib/proto/src/: lib.rs
lib/result/: Cargo.toml
lib/result/src/: lib.rs
lib/telemetry/: Cargo.toml
lib/telemetry/src/: lib.rs
proto/: auth.proto
services/auth/: Cargo.toml  Dockerfile  README.md  package.json
services/auth/src/: impl.rs  lib.rs  main.rs
services/auth/src/db/: mod.rs
services/auth/src/db/entity/: user.rs
services/gateway/: Cargo.toml  Dockerfile
services/gateway/src/: lib.rs  main.rs  state.rs
services/gateway/src/routes/: auth.rs
