[workspace]
resolver = "2"
members = ["lib/*", "services/*"]

[workspace.dependencies]
tactica-proto = { path = "./lib/proto" }
tactica-result = { path = "./lib/result" }
tactica-telemetry = { path = "./lib/telemetry" }

tokio = "1.45.1"
serde = "1.0.219"
tracing = "0.1.41"
async-trait = "0.1.88"
thiserror = "2.0.12"
anyhow = "1.0.98"

axum = "0.8.4"
http = "1.3.1"

prost = "0.13.5"
tonic = "0.13.1"

clap = "4.5.39"
sea-orm = "1.1.0"
