[package]
name = "tactica"
version = "0.1.0"
edition = "2024"

[dependencies]
tactica-svc-auth = { path = "../services/auth" }
tactica-svc-gateway = { path = "../services/gateway" }

clap = { version = "4.5.39", features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
